--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+body{
+    background-color: gray;
+}
 h1{
 color:white;
 background-color:black;
 text-align: center;
+}
+div{
+    display: flex;
+    background-color: linear-gradient(gold, white);
+    margin: 25px;
+    border-color: black;
+    border-style:solid;
 }
