--- a/style.css
+++ b/style.css
@@ -1,21 +1,31 @@
 body{
     background-color: gray;
-    display: flex;
-    flex-direction: row;
-    flex-wrap:wrap;
+
+
 }
 h1{
 color:white;
 background-color:black;
 text-align: center;
 }
-div{
 
-    background-color: linear-gradient(gold, white);
+.images{
+    flex-direction: row;
+    flex-wrap:wrap;
+    display: flex;
+    width: 100vw
+
+}
+
+div{
+    background: linear-gradient(gold, white);
     margin: 25px;
     border-color: black;
     border-style:solid;
     width:max-content;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
 
 }
 
@@ -30,7 +40,7 @@ div{
     filter:contrast(200%) ;
 }
 .shadow{
-    filter:drop-shadow(20px,gray) ;
+    filter:drop-shadow(20px 20px 5px gray) ;
 }
 .gray{
     filter:grayscale(100%) ;
@@ -51,6 +61,6 @@ div{
     filter:sepia(100%) ;
 }
 
-div:hover{
+img:hover{
     filter: none;
 }
